[package]
name = "mochi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
axum = {version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["query"] }
regex = "1.10.3"
itertools = "0.12.1"
axum-otel-metrics = "0.8.0"
opentelemetry = { version = "0.21.0"}
anyhow = "1.0.80"
fern = "0.6.2"
log = "0.4.20"
walkdir = "2.4.0"
handlebars = "5.1.1"
tower = "0.4.13"
http-body-util = "0.1.0"
indoc = "2.0.4"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"