[package]
name = "mochi"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.32"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["query"] }
regex = "1.10.4"
itertools = "0.12.1"
axum-otel-metrics = "0.8.0"
opentelemetry = { version = "0.21.0" }
anyhow = "1.0.82"
fern = "0.6.2"
log = "0.4.21"
walkdir = "2.5.0"
handlebars = "5.1.2"
tower = "0.4.13"
http-body-util = "0.1.1"
indoc = "2.0.5"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
