[package]
name = "mochi"
version = "0.1.3"
edition = "2021"
description = "Mochi - A lightweight API mocking server for testing and development environments"
license = "Apache-2.0"
repository = "https://github.com/Bloom-Perf/mochi"
authors = ["Alexandre Careil"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.13.0", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.32"
axum = { version = "0.8.0", features = ["macros"] }
axum-extra = { version = "0.12.0", features = ["query"] }
regex = "1.10.4"
itertools = "0.14.0"
axum-otel-metrics = "0.8.0"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
anyhow = "1.0.82"
fern = "0.7.0"
log = "0.4.21"
walkdir = "2.5.0"
handlebars = "6.0.0"
tower = "0.5.0"
http-body-util = "0.1.1"
indoc = "2.0.5"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
clap = { version = "4.0", features = ["derive", "env"] }

[profile.release]
# agressive optimization
opt-level = 3         # max level optimization for performance
lto = "fat"           # agressive Link Time Optimization
codegen-units = 1     # one unit for all the code
frame-pointer = "yes" # keep frame pointer for better performance
debug = false         # no debug info
strip = true          # rustc automatically strips debug symbols
panic = "abort"       # set panic strategy to abort

# Only if size is critical (potentially impacting performance)
# opt-level = "z"       # optimize for size
# lto = "thin"          # optimize for size
